[package]
name = "hopnet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.11", features = ["full"] }
futures = "0.3"
redis = { version = "0.20.2", features = ["tokio-comp"] }
rand = "*"
url = "*"
left-right = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
anyhow = "1.0"
reqwest = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
urlencoding = "2.1.0"